# alaya-protocol

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  codex-for-oss-application.md  comparison-and-benchmark.md  integrations.md  use-cases.md
docs/superpowers/plans/: 2026-07-12-alaya-v0.1-plan.md  2026-07-12-alaya-v0.2-upgrade-plan.md
docs/superpowers/specs/: 2026-07-12-alaya-v0.1-design.md  2026-07-12-alaya-v0.2-upgrade-design.md  2026-07-12-alaya-v0.3-tri-nature-design.md
evals/: memory_conformance_eval.py  project_decision_eval.py  test_no_activate_on_low_confidence.py
examples/: community_project.py  framework_adapter.py
protocol/: experience-seed.schema.json
skills/learn-from-experience/: SKILL.md
skills/learn-from-experience/agents/: openai.yaml
skills/learn-from-experience/references/: experience-model.md
skills/learn-from-experience/scripts/: alaya_skill.py
src/alaya/: __init__.py  cli.py  engine.py  models.py  store.py
tests/: test_cli.py  test_cognitive.py  test_engine.py  test_feedback.py  test_low_confidence_extra.py  test_models.py  test_packaging.py  test_store.py
