[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alaya-protocol"
version = "0.1.0"
description = "Auditable experience evolution for long-running AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Alaya Protocol Contributors"}]
keywords = ["ai-agents", "memory", "experience", "agent-infrastructure", "auditable-memory", "local-first", "agent-governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.scripts]
alaya = "alaya.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alaya = ["py.typed"]
