[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alaya-protocol"
version = "0.3.1"
description = "Auditable experience evolution for long-running AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Alaya Protocol Contributors"}]
keywords = ["ai-agents", "memory", "experience", "agent-infrastructure", "auditable-memory", "local-first", "agent-governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]

[project.scripts]
alaya = "alaya.cli:main"

[project.urls]
Homepage = "https://github.com/woshishadowhunter/alaya-protocol"
Repository = "https://github.com/woshishadowhunter/alaya-protocol"
Issues = "https://github.com/woshishadowhunter/alaya-protocol/issues"
Documentation = "https://github.com/woshishadowhunter/alaya-protocol#readme"
Changelog = "https://github.com/woshishadowhunter/alaya-protocol/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alaya = ["py.typed"]
